Add requirements, layout adjustments.

--- a/client/menu/menu.less
+++ b/client/menu/menu.less
@@ -27,7 +27,21 @@
       }
       #date {
         width: 22vw;
-//        font-size: 18px;
+      }
+    }
+  }
+
+  .sum {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 48px;
+
+    table {
+      td, th {
+        padding-left: 20px;
+      }
+      td:first-of-type {
+        padding-left: inherit;
       }
     }
   }
