--- a/client/app.less
+++ b/client/app.less
@@ -1,8 +1,20 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto);
+
+body {
+  //  background-color: #27ae60;
+}
+
 md-tabs {
   height: 100%;
 }
 
+.md-header, .md-tabs-content {
+  margin: auto;
+  max-width: 1000px;
+}
+
 .md-tabs-content {
   height: 100%;
-  margin-bottom: -48px;
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+  margin: auto auto -48px;
 }
