Fix saving food

--- a/client/menu/menu.less
+++ b/client/menu/menu.less
@@ -32,9 +32,9 @@
   }
 
   .sum {
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 48px;
+//    position: absolute;
+//    bottom: 0;
+//    margin-bottom: 48px;
 
     table {
       td, th {
