--- a/client/app.less
+++ b/client/app.less
@@ -1,16 +1,16 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
-md-tabs {
-  height: 100%;
-}
+//md-tabs {
+//  height: 100%;
+//}
 
-.md-header, .md-tabs-content {
-  margin: auto;
-  max-width: 1000px;
-}
+//.md-header, .md-tabs-content {
+//  margin: auto;
+//  max-width: 1000px;
+//}
 
-.md-tabs-content {
-  height: 100%;
-  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
-  margin: auto auto -48px;
-}
+//.md-tabs-content {
+//  height: 100%;
+//  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+//  margin: auto auto -48px;
+//}
