--- a/client/app.less
+++ b/client/app.less
@@ -3,7 +3,9 @@
 //md-tabs {
 //  height: 100%;
 //}
-
+body {
+  background-color: green;
+}
 //.md-header, .md-tabs-content {
 //  margin: auto;
 //  max-width: 1000px;
